# burgos-meteo

./: .gitignore  README.md  main.py  pyproject.toml  sfide_e_soluzioni.txt
meteo/: __init__.py  cache.py  cli.py  exceptions.py  validators.py
meteo/models/: __init__.py  location.py  weather.py
meteo/repositories/: __init__.py  geocoding_repository.py  weather_repository.py
meteo/services/: __init__.py  weather_service.py
meteo/ui/: __init__.py  charts.py  display.py  weather_codes.py
tests/: test_compare.py  test_geocoding_repository.py  test_models.py  test_validators.py  test_weather_codes.py  test_weather_repository.py  test_weather_service.py
web/: .firebaserc
web/public/: index.html
web/public/css/: style.css
web/public/js/: app.js  i18n.js
